rtest/tests/jsr335/Semantics/LambdaExpressions/EffectivelyFinal/ShouldCompile/syntax05/Test.java
// .result=COMPILE_PASS

public class Test {
	public interface TestInterface {
		public Exception functMethod(); 
	}
	
	public static void main(String[] args) {
		
		try {
			
		} catch(Exception e) {
			Exception e2 = e;
			TestInterface t = () -> e;
		}
    }
}